--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -81,3 +81,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.slick-slide {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
